# MitoSpace4D

./: .env  .gitignore  4D_custom_transformer.ipynb  Dockerfile  FourDMedicalViT.py  LICENSE  NOTES.md  README.md  cancer_NTC_PTEN.pcd  compare_two_videos.py  compare_two_videos_v1.py  entropy.ipynb  environment.yml  evaluate.py  evaluate_2024v3_cmap.py  evaluate_cancer.py  evaluate_cellpaint.py  evaluate_combined.py  evaluate_distr_matching.py  evaluate_exp.py  evaluate_liver.py  extract_intensities.py  extract_intensities_multithreaded.py  generate_custom_embedding_mitospace.py  generate_embeddings_3d.py  generate_embeddings_4d.py  generate_organoid_embeddings.py  generate_space.py  generate_space_2024v3_andre3ch.py  generate_space_exp.py  generate_space_exp_resnet3d.py  generate_space_liver.py  generate_space_tmrm.py  generate_space_v2.py  generate_space_zv1.py  generate_space_zv2.py  image_processor.py  image_viewer.py  mitopod.yaml  parallel_make_embeddings.py  (+35 more)
application/: cluster_performance.py
auto_encoder_kinetics/: __init__.py  ae_loss.py  ae_util.py  autoencoder_models_resnet.py  autoencoder_runner.py  encode_data.py  encode_data_ddp.py  test_encode_decode.py  train_model.py  train_model_ddp.py
autoencoder/: ae_util.py  autoencoder.py  autoencoder_dataset.py  autoencoder_models.py  autoencoder_models_resnet.py  autoencoder_runner.py  config.yaml  create_dummy_data.sh  dataset.py  encode_data.py  encode_data.sb  encode_data_ddp.py  encode_data_ddp.sb  loss.py  mitospace_dataset.py  model.py  model_compression.py  model_params.py  models.py  resnet_encoder.py  (+9 more)
(+314 files in other folders)
